nacos-k8s-ceph/nacos-sts-ceph.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  namespace: lapis-cmn
spec:
  serviceName: nacos-headless
  replicas: 3
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: cephfs-provisioner
      #initContainers:
      #  - name: peer-finder-plugin-install
      #    image: nacos/nacos-peer-finder-plugin:1.0
      #    imagePullPolicy: Always
      #    volumeMounts:
      #      - mountPath: /home/nacos/plugins/peer-finder
      #        name: plguindir
      containers:
        - name: nacos
          imagePullPolicy: Always
          image: nacos/nacos-server:latest
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8848
              name: client-port
            - containerPort: 7848
              name: rpc
          volumeMounts:
                  #- name: plguindir
                  #  mountPath: /home/nacos/plugins/peer-finder
            - name: datadir
              mountPath: /home/nacos/data
            - name: logdir
              mountPath: /home/nacos/logs
  volumeClaimTemplates:
          #    - metadata:
          #        name: plguindir
          #      spec:
          #        accessModes: [ "ReadWriteMany" ]
          #        storageClassName: "cephfs-sc"
          #        resources:
          #          requests:
          #  storage: 5Gi
    - metadata:
        name: datadir
      spec:
        accessModes: [ "ReadWriteMany" ]
        storageClassName: "cephfs-sc"
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: logdir
      spec:
        accessModes: [ "ReadWriteMany" ]
        storageClassName: "cephfs-sc"
        resources:
          requests:
            storage: 5Gi
  selector:
    matchLabels:
      app: nacos
