nacos-k8s-ceph/test-pvc-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: lapis-cmn
spec:
  containers:
  - name: test-pod
    image: nginx
    volumeMounts:
      - name: pvc
        mountPath: "/mnt"
  restartPolicy: "Never"
  volumes:
    - name: pvc
      persistentVolumeClaim:
        claimName: cephfs-pvc
