nacos-k8s-ceph/mysql-ceph.yaml
apiVersion: apps/v1
#kind: Deployment
kind: StatefulSet
metadata:
  name: mysql
  #  namespace: nacos
  namespace: lapis-cmn

spec:
  replicas: 1
  serviceName: mysql-headless
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: nacos/nacos-mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
          subPath: mysql
          readOnly: false
      nodeSelector:
        runtype: test
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-dynamic-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  #  namespace: nacos
  namespace: lapis-cmn
  labels:
    name: mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
  clusterIP: None
  selector:
    app: mysql
