nacos-k8s-ceph/mysql-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-nodeport
  namespace: lapis-cmn
  annotations:
    nginx.ingress.kubernetes.io/affinity: "true"
    nginx.ingress.kubernetes.io/session-cookie-name: backend
    nginx.ingress.kubernetes.io/load-balancer-method: drr
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
    - name: web
      port: 3306
      targetPort: 3306
      nodePort: 30306
