nacos-k8s-ceph/nacos-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  namespace: lapis-cmn
  labels:
    app: nacos
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 7848
      name: rpc
      targetPort: 7848
  clusterIP: None
  selector:
    app: nacos
