nacos-k8s-ceph/nacos-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-nodeport
  namespace: lapis-cmn
  annotations:
    nginx.ingress.kubernetes.io/affinity: "true"
    nginx.ingress.kubernetes.io/session-cookie-name: backend
    nginx.ingress.kubernetes.io/load-balancer-method: drr
spec:
  type: NodePort
  selector:
    app: nacos
  ports:
    - name: web
      port: 8848
      targetPort: 8848
      nodePort: 30088
