nacos-k8s-ceph/nacos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-service
  namespace: lapis-cmn
  annotations:
    nginx.ingress.kubernetes.io/affinity: "true"
    nginx.ingress.kubernetes.io/session-cookie-name: backend
    nginx.ingress.kubernetes.io/load-balancer-method: drr
spec:
  selector:
    app: nacos
  ports:
    - name: web
      port: 80
      targetPort: 8848
